Fix burger icon visibility issues on some browsers
Burger bars were staggered in when they appear / vanish due to viewport width changes on Chrome and Edge browsers

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 body {
     font-size: 16px;
     color: rgba(25, 25, 25, 1);
+    background-color: #fff;
     font-family: 'Aleo', serif;
 }
 
@@ -425,8 +426,10 @@ input {
     top: 1.5rem;
     width: 28px;
     height: 3px;
-    background: black;
-    transition: all 0.5s ease-in-out;
+    background-color: black;
+    transition-property: transform, background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
 .menu-btn__burger::before {
@@ -436,7 +439,9 @@ input {
     width: 28px;
     height: 3px;
     background-color: black;
-    transition: all 0.5s ease-in-out;
+    transition-property: transform, background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
 .menu-btn__burger::after {
@@ -446,7 +451,9 @@ input {
     width: 20px;
     height: 3px;
     background-color: black;
-    transition: all 0.5s ease-in-out;
+    transition-property: transform, background-color;
+    transition-duration: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
 .menu-btn__burger.open {
